--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -8,7 +9,6 @@
 
 <body>
     <div id="root"></div>
-    <script src="index.js"></script>
 </body>
 
 </html>
